[gd_scene load_steps=18 format=3 uid="uid://scnjjf50me2r"]

[ext_resource type="Script" uid="uid://cibsw0b7xb6wl" path="res://entities/ui/deck_viewer/scripts/DeckViewer.gd" id="1_yrncy"]
[ext_resource type="PackedScene" uid="uid://cgqyilfj4ggfa" path="res://entities/ui/menu_background/scenes/MenuBackground.tscn" id="2_c7b6s"]
[ext_resource type="ButtonGroup" uid="uid://68g48rm5eqcv" path="res://entities/ui/deck_viewer/button_groups/DeckViewerFilter.tres" id="2_t7m8t"]
[ext_resource type="Script" uid="uid://dbyhklficaq52" path="res://entities/ui/deck_viewer/scripts/ReloadDecks.gd" id="2_v68ni"]
[ext_resource type="Script" uid="uid://duoapsvxmnpca" path="res://shared/entities/deck_viewer_filter_box/scripts/DeckViewerFilterBox.gd" id="3_44ipw"]
[ext_resource type="Script" uid="uid://cjuiuh4s0clue" path="res://shared/entities/deck_view_checkbox/scripts/DeckViewCheckbox.gd" id="4_dd2y2"]
[ext_resource type="Script" uid="uid://bt7h8k61frlxw" path="res://shared/entities/deck_container/scripts/DeckContainer.gd" id="4_m2ntb"]
[ext_resource type="PackedScene" uid="uid://b3cv1g0a284mq" path="res://entities/ui/deck_preview/scenes/DeckPreview.tscn" id="6_wx8yk"]
[ext_resource type="Script" uid="uid://f8gdbcwdx8oy" path="res://shared/entities/lobby_splitter/scripts/LobbySplitter.gd" id="7_88bf3"]
[ext_resource type="Script" uid="uid://jnafxba4mcje" path="res://entities/ui/deck_viewer/scripts/DeckViewerCards.gd" id="7_tnjvp"]
[ext_resource type="PackedScene" uid="uid://bkpf0f8bvau6t" path="res://entities/ui/card_preview/scenes/CardPreview.tscn" id="8_51rxv"]
[ext_resource type="Shortcut" uid="uid://2i2jk61uyyn2" path="res://assets/shortcuts/Abort.tres" id="10_rf5ea"]
[ext_resource type="Script" uid="uid://chfatpxf8ucxr" path="res://shared/entities/clickable_button/ClickableButton.gd" id="13_p3eji"]
[ext_resource type="Resource" uid="uid://b0gd4uwnid78l" path="res://shared/entities/clickable_button/assets/animations/DefaultButtonAnimation.tres" id="13_sb03g"]
[ext_resource type="Script" uid="uid://ct3xq8li5qn6f" path="res://entities/ui/deck_viewer/scripts/button_actions/CloseDeckViewerAction.gd" id="15_j8b63"]
[ext_resource type="PackedScene" uid="uid://dduji7120t8dc" path="res://entities/ui/loading_spinner/scenes/LoadingSpinner.tscn" id="15_pfh8f"]

[sub_resource type="Resource" id="Resource_ibu2e"]
script = ExtResource("15_j8b63")
metadata/_custom_type_script = "uid://ct3xq8li5qn6f"

[node name="DeckViewer" type="CanvasLayer"]
script = ExtResource("1_yrncy")

[node name="MenuBackground" parent="." instance=ExtResource("2_c7b6s")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Deck Controls" type="HBoxContainer" parent="VBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Reload Decks" type="Button" parent="VBoxContainer/MarginContainer/PanelContainer/Deck Controls"]
layout_mode = 2
tooltip_text = "RELOAD_CUSTOM_DECKS_TOOLTIP"
text = "RELOAD_CUSTOM_DECKS"
script = ExtResource("2_v68ni")
is_focused = true

[node name="Filter Decks" type="LineEdit" parent="VBoxContainer/MarginContainer/PanelContainer/Deck Controls"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "FILTER_DECKS"
script = ExtResource("3_44ipw")

[node name="Show All" type="CheckButton" parent="VBoxContainer/MarginContainer/PanelContainer/Deck Controls"]
layout_mode = 2
tooltip_text = "SHOW_ALL_TOOLTIP"
button_pressed = true
button_group = ExtResource("2_t7m8t")
text = "SHOW_ALL"
script = ExtResource("4_dd2y2")

[node name="Show Built In" type="CheckButton" parent="VBoxContainer/MarginContainer/PanelContainer/Deck Controls"]
layout_mode = 2
tooltip_text = "SHOW_BUILT_IN_TOOLTIP"
button_group = ExtResource("2_t7m8t")
text = "SHOW_BUILT_IN"
script = ExtResource("4_dd2y2")

[node name="Show Custom" type="CheckButton" parent="VBoxContainer/MarginContainer/PanelContainer/Deck Controls"]
layout_mode = 2
tooltip_text = "SHOW_CUSTOM_TOOLTIP"
button_group = ExtResource("2_t7m8t")
text = "SHOW_CUSTOM"
script = ExtResource("4_dd2y2")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/MarginContainer2/PanelContainer2"]
layout_mode = 2
split_offset = -420
dragger_visibility = 2
script = ExtResource("7_88bf3")
default_split_size = -420
mobile_split_size = 0

[node name="Decks" type="ScrollContainer" parent="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="DeckContainer" type="GridContainer" parent="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/Decks"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_m2ntb")
deck_preview_template = ExtResource("6_wx8yk")
scroll_speed = 15.0
decks_visible_on_start = false

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="Cards" type="GridContainer" parent="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/ScrollContainer" node_paths=PackedStringArray("deck_container", "system_card_container", "built_in_card_container")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
columns = 2
script = ExtResource("7_tnjvp")
card_template = ExtResource("8_51rxv")
deck_container = NodePath("../../Decks/DeckContainer")
scroll_speed = 15.0
system_card_container = NodePath("../../../../../../preloaded_cards/system")
built_in_card_container = NodePath("../../../../../../preloaded_cards/built_in")

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="View Controls" type="HBoxContainer" parent="VBoxContainer/MarginContainer3/PanelContainer3"]
layout_mode = 2

[node name="Close" type="Button" parent="VBoxContainer/MarginContainer3/PanelContainer3/View Controls"]
layout_mode = 2
size_flags_horizontal = 10
shortcut = ExtResource("10_rf5ea")
shortcut_in_tooltip = false
text = "CLOSE"
script = ExtResource("13_p3eji")
animation_resource = ExtResource("13_sb03g")
pressed_action = SubResource("Resource_ibu2e")

[node name="preloaded_cards" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 560.0
offset_top = 121.0
offset_right = 560.0
offset_bottom = 121.0

[node name="system" type="Control" parent="preloaded_cards"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="built_in" type="Control" parent="preloaded_cards"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LoadingSpinner" parent="." instance=ExtResource("15_pfh8f")]

[connection signal="deck_loading_done" from="." to="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/ScrollContainer/Cards" method="cards_loaded"]
[connection signal="decks_loading" from="." to="VBoxContainer/MarginContainer/PanelContainer/Deck Controls/Reload Decks" method="disable_button"]
[connection signal="decks_loading" from="." to="VBoxContainer/MarginContainer/PanelContainer/Deck Controls/Filter Decks" method="disable"]
[connection signal="decks_loading" from="." to="VBoxContainer/MarginContainer/PanelContainer/Deck Controls/Show All" method="loading_decks"]
[connection signal="decks_loading" from="." to="VBoxContainer/MarginContainer/PanelContainer/Deck Controls/Show Built In" method="loading_decks"]
[connection signal="decks_loading" from="." to="VBoxContainer/MarginContainer/PanelContainer/Deck Controls/Show Custom" method="loading_decks"]
[connection signal="decks_loading" from="." to="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/ScrollContainer/Cards" method="clear_all_system_cards"]
[connection signal="decks_loading" from="." to="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/ScrollContainer/Cards" method="decks_loading"]
[connection signal="decks_loading" from="." to="VBoxContainer/MarginContainer3/PanelContainer3/View Controls/Close" method="disable_button"]
[connection signal="decks_loading" from="." to="LoadingSpinner" method="show"]
[connection signal="scene_ready" from="." to="VBoxContainer/MarginContainer/PanelContainer/Deck Controls/Reload Decks" method="enable_button"]
[connection signal="scene_ready" from="." to="VBoxContainer/MarginContainer/PanelContainer/Deck Controls/Filter Decks" method="enable"]
[connection signal="scene_ready" from="." to="VBoxContainer/MarginContainer/PanelContainer/Deck Controls/Show All" method="loading_decks_done"]
[connection signal="scene_ready" from="." to="VBoxContainer/MarginContainer/PanelContainer/Deck Controls/Show Built In" method="loading_decks_done"]
[connection signal="scene_ready" from="." to="VBoxContainer/MarginContainer/PanelContainer/Deck Controls/Show Custom" method="loading_decks_done"]
[connection signal="scene_ready" from="." to="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/Decks/DeckContainer" method="make_decks_visible"]
[connection signal="scene_ready" from="." to="VBoxContainer/MarginContainer3/PanelContainer3/View Controls/Close" method="enable_button"]
[connection signal="scene_ready" from="." to="LoadingSpinner" method="hide"]
[connection signal="decks_loading" from="VBoxContainer/MarginContainer/PanelContainer/Deck Controls/Reload Decks" to="." method="load_decks"]
[connection signal="text_changed" from="VBoxContainer/MarginContainer/PanelContainer/Deck Controls/Filter Decks" to="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/Decks/DeckContainer" method="filter_decks_by_name"]
[connection signal="toggled" from="VBoxContainer/MarginContainer/PanelContainer/Deck Controls/Show All" to="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/Decks/DeckContainer" method="show_all_decks"]
[connection signal="toggled" from="VBoxContainer/MarginContainer/PanelContainer/Deck Controls/Show Built In" to="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/Decks/DeckContainer" method="show_only_built_in"]
[connection signal="toggled" from="VBoxContainer/MarginContainer/PanelContainer/Deck Controls/Show Custom" to="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/Decks/DeckContainer" method="show_only_custom"]
[connection signal="data_reloaded" from="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/Decks/DeckContainer" to="VBoxContainer/MarginContainer/PanelContainer/Deck Controls/Show All" method="signal_activated"]
[connection signal="deck_selected" from="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/Decks/DeckContainer" to="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/ScrollContainer/Cards" method="show_cards"]
[connection signal="deck_unselected" from="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/Decks/DeckContainer" to="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/ScrollContainer/Cards" method="remove_all_cards"]
[connection signal="decks_getting_placed" from="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/Decks/DeckContainer" to="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/ScrollContainer/Cards" method="decks_loaded"]
[connection signal="cards_preloaded" from="VBoxContainer/MarginContainer2/PanelContainer2/HSplitContainer/ScrollContainer/Cards" to="." method="scene_is_ready"]
